add Ohce TDD Kata

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>PrimeFactors</module>
         <module>RomanNumerals</module>
         <module>StringCalculator</module>
+        <module>Ohce</module>
     </modules>
 
     <properties>
